# MnistCNN

./: .gitignore  README.md  main.py
LeNet/: Net.py  test.py  train.py
LeNet/models/: LeNet.pkl
ResNet/: chechOnnx.py  model.py  onnxResnet.py  predict.py  torch2onnx.py  train.py
deployResNet/: .gitignore  CMakeLists.txt
deployResNet/include/: InferUtils.h  imageProcess.h  infer_utils.h  resnet34.h  tools.h  utils.h
deployResNet/src/: cudaCompute.cu  cudaTest.cu  imageProcess.cpp  infer_utils.cpp  main.cpp  resnet34.cpp  test.cpp  utils.cpp
logs/: events.out.tfevents.1730442040.lab506.283251.0  events.out.tfevents.1731313950.lab506.2487946.0  events.out.tfevents.1731314560.lab506.2490013.0  events.out.tfevents.1731315784.lab506.2535165.0
